feat: implement extend delegate token

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
+app:
+  namespace: ${AB_NAMESPACE}
+
 plugin:
   grpc:
-    config:
-      namespace: ${AB_NAMESPACE:accelbyte}
-      resource_name: 'PIRGRPCSERVICE'
     server:
       interceptor:
         debug-logger:
