--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,7 +1,5 @@
 app:
-  config:
-    namespace: ${NAMESPACE:accelbyte}
-    resource_name: 'MMV2GRPCSERVICE'
+  namespace: 'test'
   security:
     client_id: '123'
     client_secret: 'abc'
