chore(docker-compose): clean up
simplify build, move extra host after env, update otel service name

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,26 +2,26 @@
 # This is licensed software from AccelByte Inc, for limitations
 # and restrictions contact your company contract manager.
 
-version: '3'
+version: '3.5'
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     ports:
       - "6565:6565"
       - "8080:8080"
     environment:
+      - OTEL_EXPORTER_ZIPKIN_ENDPOINT=http://host.docker.internal:9411/api/v2/spans
+      - OTEL_TRACES_EXPORTER=zipkin
+      - OTEL_METRICS_EXPORTER=none
+      - OTEL_SERVICE_NAME=RotatingShopItemsGrpcPluginServerJava
+      - OTEL_PROPAGATORS=b3multi
       - AB_BASE_URL
       - AB_CLIENT_ID
       - AB_CLIENT_SECRET
       - AB_NAMESPACE
       - PLUGIN_GRPC_SERVER_AUTH_ENABLED
-      - OTEL_EXPORTER_ZIPKIN_ENDPOINT=http://host.docker.internal:9411/api/v2/spans
-      - OTEL_TRACES_EXPORTER=zipkin
-      - OTEL_METRICS_EXPORTER=none
-      - OTEL_SERVICE_NAME=CustomRotatingShopItemsServerJava
-      - OTEL_PROPAGATORS=b3multi
+    extra_hosts:
+      - host.docker.internal:host-gateway
     logging:
       driver: loki
       options:
@@ -29,7 +29,5 @@ services:
         mode: non-blocking
         max-buffer-size: 4m
         loki-retries: "3"
-    extra_hosts:
-      - host.docker.internal:host-gateway
 
 
