--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,12 +22,12 @@ services:
       - PLUGIN_GRPC_SERVER_AUTH_ENABLED
     extra_hosts:
       - host.docker.internal:host-gateway
-    logging:
-      driver: loki
-      options:
-        loki-url: http://localhost:3100/loki/api/v1/push
-        mode: non-blocking
-        max-buffer-size: 4m
-        loki-retries: "3"
+    # logging:
+    #   driver: loki
+    #   options:
+    #     loki-url: http://localhost:3100/loki/api/v1/push
+    #     mode: non-blocking
+    #     max-buffer-size: 4m
+    #     loki-retries: "3"
 
 
