chore: rename GRPC_SERVER_URL and EXTEND_APP_NAME env var

--- a/demo/cli/.env.template
+++ b/demo/cli/.env.template
@@ -4,5 +4,5 @@ AB_CLIENT_SECRET=
 AB_NAMESPACE=
 AB_USERNAME=
 AB_PASSWORD=
-AB_GRPC_SERVER_URL=
-AB_EXTEND_APP_NAME=
+GRPC_SERVER_URL=
+EXTEND_APP_NAME=
