chore(docker-compose): make required env vars mandatory

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,16 +10,16 @@ services:
       - "6565:6565"
       - "8080:8080"
     environment:
+      - AB_CLIENT_ID=${AB_CLIENT_ID}
+      - AB_CLIENT_SECRET=${AB_CLIENT_SECRET}
+      - AB_BASE_URL=${AB_BASE_URL}
+      - AB_NAMESPACE=${AB_NAMESPACE}
+      - PLUGIN_GRPC_SERVER_AUTH_ENABLED
       - OTEL_EXPORTER_ZIPKIN_ENDPOINT=http://host.docker.internal:9411/api/v2/spans
       - OTEL_TRACES_EXPORTER=zipkin
       - OTEL_METRICS_EXPORTER=none
       - OTEL_SERVICE_NAME=RotatingShopItemsGrpcPluginServerJava
       - OTEL_PROPAGATORS=b3multi
-      - AB_BASE_URL
-      - AB_CLIENT_ID
-      - AB_CLIENT_SECRET
-      - AB_NAMESPACE
-      - PLUGIN_GRPC_SERVER_AUTH_ENABLED
     extra_hosts:
       - host.docker.internal:host-gateway
     # logging:
